Bug 805613 - Don't remove fullscreen approved observer on documents which don't add it, prevents assertion failure spam. r=bz